--- a/app/views/locale_lab/dashboard/show.html.erb
+++ b/app/views/locale_lab/dashboard/show.html.erb
@@ -1,27 +1,21 @@
 <h2>Translation files</h2>
 <ul>
-  <% translation_files.each do |file| %>
-    <li><%= file %></li>
+  <% @files.each do |file| %>
+    <li><strong><%= file.relative_path %>:</strong> <%= file.locales.to_sentence %></li>
   <% end %>
 </ul>
+<p><strong>Available locales:</strong> <%= @locales.to_sentence %></p>
 
-<h2>Available locales</h2>
+<h2>Available Keys</h2>
 <ul>
-  <% translation_locales.each do |locale| %>
-    <li><%= locale %></li>
-  <% end %>
-</ul>
-
-<h2>Available keys</h2>
-<ul>
-  <% translation_keys.each do |key| %>
+  <% @translations_by_key.each do |key, translations| %>
     <li>
-      <strong><%= key %></strong>
+      <strong><%= key %>:</strong>
       <dl>
-      <% translation_locales.each do |locale| %>
-        <dt><%= locale %></dt>
-        <dd><pre><%= translation_contents[locale][key] %></pre></dd>
-      <% end %>
+        <% translations.each do |translation| %>
+          <dt><%= translation.locale %> <small>(<%= translation.file.relative_path %>)</small></dt>
+          <dd><pre><%= translation.value %></pre></dd>
+        <% end %>
       </dl>
     </li>
   <% end %>
