Add the ability to create and update simple key/value locale keys

--- a/app/views/locale_lab/translations/_navigation.html.erb
+++ b/app/views/locale_lab/translations/_navigation.html.erb
@@ -3,24 +3,30 @@
   <ul>
     <% if navigation.parent_folder %>
       <li class="folder folder-up">
-        <%= link_to '..', locale_lab.translation_path(navigation.parent_folder) %>
+        📁 <%= link_to '..', locale_lab.translation_path(navigation.parent_folder) %>
       </li>
     <% else %>
       <li class="folder folder-up">
-        <%= link_to '..', locale_lab.root_path %>
+        📁 <%= link_to '..', locale_lab.root_path %>
       </li>
     <% end %>
 
     <% navigation.folders.each do |folder| %>
+      <%
+        label = folder.split('.').last
+      %>
       <li class="folder">
-        <%= link_to folder, locale_lab.translation_path(folder) %>
+        📁 <%= link_to label, locale_lab.translation_path(folder) %>
       </li>
     <% end %>
 
     <% navigation.keys.each do |key| %>
-      <% label = key.split('.').last %>
+      <%
+        label = key.split('.').last
+        label = content_tag(:strong, label) if key == local_assigns[:path]
+      %>
       <li class="key">
-        <%= link_to label, locale_lab.translation_path(key) %>
+        📃 <%= link_to label, locale_lab.translation_path(key) %>
       </li>
     <% end %>
   </ul>
