--- a/app/views/locale_lab/translations/_navigation.html.erb
+++ b/app/views/locale_lab/translations/_navigation.html.erb
@@ -1,5 +1,5 @@
 <aside id="translations-explorer">
-  <h2>Navigation</h2>
+  <h2><%= t '.title' %></h2>
   <ul>
     <% if navigation.parent_folder %>
       <li class="folder folder-up">
