--- a/app/views/locale_lab/translations/show.html.erb
+++ b/app/views/locale_lab/translations/show.html.erb
@@ -7,7 +7,7 @@
   <ul class="actions">
     <li>
       <%=
-        link_to 'New', locale_lab.new_translation_path(scope: @navigation.path)
+        link_to t('.new'), locale_lab.new_translation_path(scope: @navigation.path)
       %>
     </li>
   </ul>
