--- a/app/views/locale_lab/translations/new.html.erb
+++ b/app/views/locale_lab/translations/new.html.erb
@@ -1,7 +1,7 @@
-<h1>New translation</h1>
+<h1><%= t '.title' %></h1>
 <%= form_with url: locale_lab.translations_path, method: :post do |f| %>
-  <%= f.label      :path, 'Path:'       %>
+  <%= f.label      :path, t('.path')   %>
   <%= f.text_field :path, value: @path %>
 
-  <%= f.submit 'Create' %>
+  <%= f.submit t('.create') %>
 <% end %>
