Add working Stimulus and Turbo (with sample ‘autogrow’ controller)

--- a/app/views/layouts/locale_lab/application.html.erb
+++ b/app/views/layouts/locale_lab/application.html.erb
@@ -5,7 +5,8 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= stylesheet_link_tag    "locale_lab/application", media: "all" %>
+  <%= stylesheet_link_tag       "locale_lab/application", media: "all" %>
+  <%= javascript_importmap_tags "locale_lab_application" %>
 </head>
 <body>
 
