Add the ability to delete locale keys (uses javascript)

--- a/app/views/locale_lab/translations/_translations_with_key.html.erb
+++ b/app/views/locale_lab/translations/_translations_with_key.html.erb
@@ -1,5 +1,15 @@
 <li>
   <strong>📃 <%= key %>:</strong>
+  <%=
+    button_to 'Destroy', locale_lab.translation_path(key),
+      method: :delete,
+      form:   {
+        data: {
+          turbo_method: :delete,
+          turbo_confirm: 'Are you sure?'
+        }
+      }
+  %>
   <ul>
     <% translations.each do |translation| %>
       <li>
