Fix I18n when using as an engine in a different app

--- a/app/views/locale_lab/translations/_translations_with_key.html.erb
+++ b/app/views/locale_lab/translations/_translations_with_key.html.erb
@@ -1,12 +1,12 @@
 <li>
   <strong>📃 <%= key %>:</strong>
   <%=
-    button_to 'Destroy', locale_lab.translation_path(key),
+    button_to t('.destroy'), locale_lab.translation_path(key),
       method: :delete,
       form:   {
         data: {
-          turbo_method: :delete,
-          turbo_confirm: 'Are you sure?'
+          turbo_method:  :delete,
+          turbo_confirm: t('.confirm_destroy')
         }
       }
   %>
