--- a/app/views/locale_lab/translations/_navigation.html.erb
+++ b/app/views/locale_lab/translations/_navigation.html.erb
@@ -1,4 +1,4 @@
-<aside id="translations-explorer">
+<nav id="translations-explorer">
   <h2><%= t '.title' %></h2>
   <ul>
     <% if navigation.parent_folder %>
@@ -30,4 +30,4 @@
       </li>
     <% end %>
   </ul>
-</aside>
+</nav>
