--- a/app/assets/stylesheets/locale_lab/application.css
+++ b/app/assets/stylesheets/locale_lab/application.css
@@ -10,6 +10,24 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+
+/*
+** Setup
+*/
+@import "setup/variables.css";
+@import "setup/outlines.css";
+@import "setup/layout.css";
+
+/*
+** Helpers 
+*/
+@import "helpers/wrappers.css";
+@import "helpers/buttons.css";
+
+/*
+** Components
+*/
+@import "components/current-application.css";
+@import "components/translations-explorer.css";
+@import "components/translation-cards.css";
