--- a/app/views/layouts/locale_lab/application.html.erb
+++ b/app/views/layouts/locale_lab/application.html.erb
@@ -10,7 +10,11 @@
 </head>
 <body>
 
-<%= yield %>
+  <div class="container">
+    <div class="wrapper flex-wrapper">
+      <%= yield %>
+    </div>
+  </div>
 
 </body>
 </html>
