--- a/app/views/locale_lab/translations/show.html.erb
+++ b/app/views/locale_lab/translations/show.html.erb
@@ -1,26 +1,28 @@
 <%=
-  render 'navigation', navigation: @browser, path: @navigation.path
+  render 'shared/locale_lab/sidebar', navigation: @browser, path: @navigation.path
 %>
 
-<header>
-  <h2><%= @navigation.path %></h2>
-  <ul class="actions">
-    <li>
-      <%=
-        link_to t('.new'), locale_lab.new_translation_path(scope: @navigation.path)
-      %>
-    </li>
-  </ul>
-</header>
+<div class="content">
+  <header>
+    <h2><%= @navigation.path %></h2>
+    <ul class="actions">
+      <li>
+        <%=
+          link_to t('.new'), locale_lab.new_translation_path(scope: @navigation.path)
+        %>
+      </li>
+    </ul>
+  </header>
 
-<% if @translations.present? %>
-  <ul>
-    <% @translations.each do |key, translations| %>
-      <%=
-        render 'translations_with_key',
-          key:          key,
-          translations: translations
-      %>
-    <% end %>
-  </ul>
-<% end %>
+  <% if @translations.present? %>
+    <ul>
+      <% @translations.each do |key, translations| %>
+        <%=
+          render 'translations_with_key',
+            key:          key,
+            translations: translations
+        %>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
