Use actual application name and git branch

--- a/app/views/locale_lab/shared/_current_application.html.erb
+++ b/app/views/locale_lab/shared/_current_application.html.erb
@@ -1,4 +1,4 @@
   <div class="current-application">
-    <strong class="application">locale_lab.app</strong>
-    <span class="branch">mollie-integration</span>
+    <strong class="application"><%= application_name %></strong>
+    <span class="branch"><%= current_branch %></span>
   </div>
