--- a/app/views/locale_lab/translations/_translations_with_key.html.erb
+++ b/app/views/locale_lab/translations/_translations_with_key.html.erb
@@ -3,6 +3,7 @@
   <%=
     button_to t('.destroy'), locale_lab.translation_path(key),
       method: :delete,
+      tabindex: '-1',
       form:   {
         data: {
           turbo_method:  :delete,
