--- a/app/views/locale_lab/translations/_navigation.html.erb
+++ b/app/views/locale_lab/translations/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav id="translations-explorer">
+<nav id="translations-explorer" class="translations-explorer">
   <h2><%= t '.title' %></h2>
   <ul>
     <% if navigation.parent_folder %>
