--- a/app/assets/stylesheets/locale_lab/setup/outlines.css
+++ b/app/assets/stylesheets/locale_lab/setup/outlines.css
@@ -1,6 +1,6 @@
 body {
-  background: #fff;
-  font-size: 16px;
-  line-height: 24px;
-  font-family: var(--fontFamily-system);
+  background: var(--bgColor-body);
+  font-size: var(--text-body-fontSize-normal);
+  line-height: var(--text-body-lineHeight-normal);
+  font-family: var(--text-body);
 }
