Fix typo, `.hidden` -> `.display-none`

--- a/app/assets/stylesheets/locale_lab/application.css
+++ b/app/assets/stylesheets/locale_lab/application.css
@@ -25,7 +25,7 @@
 */
 @import "helpers/wrappers.css";
 @import "helpers/buttons.css";
-@import "helpers/visibilty.css";
+@import "helpers/visibility.css";
 
 /*
 ** Components
