--- a/app/views/locale_lab/translations/_translation_with_key.html.erb
+++ b/app/views/locale_lab/translations/_translation_with_key.html.erb
@@ -2,9 +2,10 @@
   id    = key.gsub('.', '_') + "_#{translation.locale}"
   label = content_tag(:span, translation.locale) + " " + content_tag(:small, "(#{translation.file.relative_path})")
 %>
+
 <li class="translations-card-locale">
   <%= turbo_frame_tag(id) do %>
-    <%= form_with url: locale_lab.translation_path(key), method: :put, data: { controller: 'translation-value', translation_value_text_area_value: translation.value } do |f| %>
+    <%= form_with url: locale_lab.translation_path(key), method: :put, data: { controller: 'translation-value', translation_value_text_area_value: translation.value, translation_value_editor_outlet: '.editor' } do |f| %>
       <%= f.hidden_field :locale, value: translation.locale %>
       <%= f.label        id,      label %>
 
@@ -32,6 +33,9 @@
         </li>
         <li>
           <%= f.button 'Discard', disabled: true, tabindex: '-1', type: 'button', data: { action: 'click->translation-value#discard', translation_value_target: 'discardButton' } %>
+        </li>
+        <li>
+          <%= f.button 'Editor', tabindex: '-1', type: 'button', data: { action: 'click->translation-value#editInEditor' } %>
         </li>
       </ul>
     <% end %>
