Open CodeMirror editor in a dialog

--- a/app/views/locale_lab/translations/show.html.erb
+++ b/app/views/locale_lab/translations/show.html.erb
@@ -29,7 +29,9 @@
   </div>
 </div>
 
-<div data-controller="editor" data-editor-hidden-class="display-none" class="editor display-none">
-  <button data-action="click->editor#close" data-editor-target="closeButton">Close</button>
-  <button data-action="click->editor#save" data-editor-target="saveButton">Save</button>
-</div>
+<dialog data-controller="editor" class="editor" data-editor-hidden-class="display-none">
+  <div data-editor-target="wrapper">
+    <button data-action="click->editor#close" data-editor-target="closeButton">Close</button>
+    <button data-action="click->editor#save" data-editor-target="saveButton">Save</button>
+  </div>
+</dialog>
